# project_v1

./: docker-compose.yml
backend/: .env-non-dev
backend/api_parsing/: .env  .env-non-dev  main.py  pyproject.toml
backend/api_parsing/alembic/: env.py
backend/api_parsing/alembic/versions/: 2024_02_20_1648-7dd50087253b_link.py  2024_02_20_1927-080ffeaa1513_process.py
backend/api_parsing/core/: config.py
backend/api_parsing/modules/: __init__.py
backend/api_parsing/modules/links/: models.py  repository.py  router.py  schemas.py
backend/api_parsing/modules/parsing_process/: models.py  repository.py  router.py
backend/api_parsing/utils/parsing/: avito_url_generator_links.py  locations.py  parsing.py  parsing_full_ads.py  process.py  web_driver_current.py
