[tool.poetry]
name = "api-parsing"
version = "0.1.0"
description = ""
authors = ["kochenov <kochenof@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
black = "^24.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
