[tool.poetry]
name = "api-parsing"
version = "0.1.0"
description = ""
authors = ["kochenov <kochenof@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.109.0"
uvicorn = "^0.27.0"
pydantic-settings = "^2.1.0"
sqlalchemy = "^2.0.25"
fastapi-pagination = "^0.12.16"
asyncpg = "^0.29.0"
alembic = "^1.13.1"


[tool.poetry.group.dev.dependencies]
black = "^24.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
